[package]
name = "gm_packuwus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = "17.0.0"
gmod-lzma = "1.0.1"
goblin = "0.8.2"
hex = "0.4.3"
hexdump = "0.1.2"
lazy_static = "1.5.0"
procfs = "0.16.0"
retour = { version = "0.3.1", features = ["static-detour"] }
sha2 = "0.10.8"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4"] }
